--- a/source/index.html
+++ b/source/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
   <h1>Добро пожаловать в Лигу А.</h1>
+  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam placeat cum dolor, soluta voluptate itaque ad eos ea voluptas, quae aspernatur facere, consequatur repudiandae nobis neque nesciunt laborum quos culpa.</p>
 </body>
 </html>
